@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2020 the original author or authors.
+ * Copyright 2016-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -47,7 +47,6 @@ import org.springframework.integration.channel.FixedSubscriberChannel;
 import org.springframework.integration.channel.QueueChannel;
 import org.springframework.integration.config.EnableIntegration;
 import org.springframework.integration.config.GlobalChannelInterceptor;
-import org.springframework.integration.context.IntegrationContextUtils;
 import org.springframework.integration.core.MessageSource;
 import org.springframework.integration.dsl.IntegrationFlow;
 import org.springframework.integration.dsl.IntegrationFlowDefinition;
@@ -60,7 +59,6 @@ import org.springframework.integration.jms.ActiveMQMultiContextTests;
 import org.springframework.integration.jms.JmsDestinationPollingSource;
 import org.springframework.integration.scheduling.PollerMetadata;
 import org.springframework.integration.support.MessageBuilder;
-import org.springframework.integration.test.condition.LogLevels;
 import org.springframework.integration.test.util.TestUtils;
 import org.springframework.jms.connection.CachingConnectionFactory;
 import org.springframework.jms.core.JmsTemplate;
@@ -88,8 +86,6 @@ import org.springframework.transaction.PlatformTransactionManager;
  * @since 5.0
  */
 @SpringJUnitConfig
-@LogLevels(level = "debug",
-		categories = {"org.springframework", "org.springframework.integration", "org.apache"})
 @DirtiesContext
 public class JmsTests extends ActiveMQMultiContextTests {
 
@@ -480,7 +476,7 @@ public class JmsTests extends ActiveMQMultiContextTests {
 		public IntegrationFlow jmsMessageDrivenRedeliveryFlow() {
 			return IntegrationFlows
 					.from(Jms.messageDrivenChannelAdapter(jmsConnectionFactory())
-							.errorChannel(IntegrationContextUtils.ERROR_CHANNEL_BEAN_NAME)
+							.errorChannel("errorChannelForRedelivery")
 							.destination("jmsMessageDrivenRedelivery")
 							.configureListenerContainer(c -> c
 									.transactionManager(mock(PlatformTransactionManager.class))
@@ -500,7 +496,7 @@ public class JmsTests extends ActiveMQMultiContextTests {
 
 		@Bean
 		public IntegrationFlow errorHandlingFlow() {
-			return IntegrationFlows.from(IntegrationContextUtils.ERROR_CHANNEL_BEAN_NAME)
+			return IntegrationFlows.from("errorChannelForRedelivery")
 					.handle(m -> {
 						MessagingException exception = (MessagingException) m.getPayload();
 						redeliveryLatch().countDown();
